# server-mgr

./: .env-dist  .gitignore  .gitlab-ci.yml  README.md  docker-compose.testing.yml  docker-compose.yml
backend/: .terraform.lock.hcl  entrypoint.sh  main.tf  pyproject.toml
backend/app/: mypy.ini  pytest.ini  versions.tf
backend/app/config/: celery.py  settings.py  urls.py
backend/app/core/: admin.py  models.py  serializers.py  urls.py  views.py
backend/app/core/migrations/: 0001_initial.py  0002_alter_profile_preferred_language.py
backend/app/core/templates/account/: login.html  signup.html
backend/app/core/templates/core/: base.html  base_social.html  bootstrap.html  home.html
backend/app/core/templates/socialaccount/: base.html
backend/app/server/: admin.py  apps.py  models.py  server_registration.py  tasks.py  urls.py  views.py
backend/app/server/migrations/: 0001_initial.py
backend/app/server/providers/hetzner/: __init__.py  base.py  templates.py
backend/app/server/providers/terraform-hetzner/: __init__.py  base.py
backend/app/server/providers/terraform_hetzner/: __init__.py  base.py  templates.py
backend/app/server/templates/server/: server_add.html  server_confirm_delete.html  server_confirm_pw_reset.html  server_confirm_reboot.html  server_confirm_start.html  server_confirm_stop.html  server_detail.html  server_list.html  server_prolong.html
backend/app/server_mgr/: admin.py  apps.py  models.py  server_template_executor.py  urls.py  views.py
backend/app/server_mgr/example_server_template/: commands.py
backend/app/server_mgr/migrations/: 0001_initial.py  0002_auto_20230215_1744.py  0002_rename_address_server_server_address.py  0003_server_notify_before_destroy_and_more.py  0003_server_user_massage.py  0004_server_info_mail_sent.py  0004_server_removal_at.py  0005_alter_server_removal_at.py  0005_server_extending_lifetime_secret.py  0006_alter_servervariant_notify_before_destroy.py  0006_server_server_name.py  0007_rename_user_massage_server_user_message.py  0007_servervariant_allowed_groups.py  0008_alter_server_removal_at.py  0008_remove_servervariant_allowed_groups_and_more.py  0009_alter_servervariant_allowed_groups.py  0010_server_prolong_by_days.py  0011_remove_server_prolong_by_days_and_more.py  0012_alter_servervariant_prolong_by_days.py
backend/app/server_mgr/providers/: hetzner.py
backend/app/server_mgr/scripts/: cleanup.py
backend/app/server_mgr/templates/server_mgr/: server_add.html  server_confirm_delete.html  (+4 more)
backend/app/tests/: conftest.py  test_commands.py
backend/app/tests/server_tests/: test_registry.py
(+3 files in other folders)
